syntax = "proto3";

package leysco.auth.v1;

option csharp_namespace = "Shared.Contracts.Auth";

// Authentication Service - Internal gRPC API
service AuthService {
  // Validate JWT token and return user information
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Get user permissions for authorization
  rpc GetUserPermissions(GetUserPermissionsRequest) returns (GetUserPermissionsResponse);
  
  // Get user details by ID
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}

// Request/Response Messages
message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string username = 3;
  repeated string roles = 4;
  string error_message = 5;
}

message GetUserPermissionsRequest {
  string user_id = 1;
}

message GetUserPermissionsResponse {
  repeated string permissions = 1;
  repeated string roles = 2;
  bool success = 3;
  string error_message = 4;
}

message GetUserByIdRequest {
  string user_id = 1;
}

message GetUserByIdResponse {
  UserInfo user = 1;
  bool success = 2;
  string error_message = 3;
}

// Common Types
message UserInfo {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  repeated string roles = 6;
  bool is_active = 7;
}
